lib/src/compiler/tests/testdata/errors/146.out
error[E045]: arbitrary regular expression prefix
 --> line:3:11
  |
3 |     $a = /.*foo/s
  |           ^^ this prefix can be arbitrarily long and matches all bytes